<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Homework</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="school">School (FULL name)</string>
    <string name="class_string">Class</string>


    <string name="subject">Subject</string>
    <string name="media">Media</string>
    <string name="page">Page(s)</string>
    <string name="numbers">Number(s)</string>
    <string name="until">Until</string>

    <string name="loading">Loading…</string>

    <string name="create">Create!</string>
    <string name="done">Done!</string>
    <string name="flag">Flag!</string>
    <string name="login">Login!</string>
    <string name="register">Register!</string>

    <string name="page_placeholder">Page(s) %1$s</string>
    <string name="numbers_placeholder">Number(s) %1$s</string>
    <string name="until_placeholder">Until %1$s</string>

    <string name="settings_toolbar">Settings</string>
    <string name="register_toolbar">Register</string>
    <string name="login_toolbar">Login</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="create_entry">Create Entry</string>
    <string name="loading_title">Loading</string>
    <string name="new_homework_title">New homework!</string>
    <string name="new_homework_text">New homework in %1$s until %2$s</string>
    <string name="local_date_format">MM.dd.yyyy</string>
    <string name="server_date_format" translatable="false">yyyy-MM-dd</string>
    <string name="date_desc">Date - descending</string>
    <string name="date_asc">Date - ascending</string>
    <string name="subject_asc">Subject - ascending</string>
    <string name="subject_desc">Subject - descending</string>
    <string name="search">Search</string>
    <string name="filter_subject_selection">Subject?</string>
    <string name="filter_subject_all">All</string>
    <string name="date">Date</string>
    <string name="filter_date_from">From</string>
    <string name="filter_date_until">Until</string>
    <string name="register_class">Register by class</string>
    <string name="register_course">Register by courses</string>
    <string name="_continue">Continue</string>
    <string name="addCourse">Add a course</string>
    <string name="course">Course</string>
    <string name="teacher">Teacher (short)</string>
    <string name="notification_new_homework_title">New homework in %1$s</string>
    <string name="notification_new_homework_text">Page(s) %2$s in the %1$s until %3$s</string>

    <string name="error_not_logged_in">You are not logged in!</string>
    <string name="error_no_internet">You are not connected to the internet!\nPlease enable Wifi or mobile data</string>
    <string name="username_taken">This username is already taken!</string>

    <string-array name="flag_reasons">
        <item>Wrong content</item>
        <item>Insulting</item>
        <item>Double</item>
    </string-array>
    <string name="account_data_wrong">Your login data is invalid!</string>
    <string name="error_internal">An internal error occured! The developer is already noticed</string>
    <string name="error_already_flagged">You have already flagged this entry!</string>
    <string name="error_not_in_course">You are not in a course called \"%1$s\"!</string>
    <string name="error_no_internet_title">No connection!</string>
    <string name="warning_missing_username_or_password">Please enter username and password!</string>
    <string name="flag_confirmation_title">Flag this entry?</string>
    <string name="flag_confirmation_message">Do you really want to flag this entry?\nIf it happens to often that you falsely flag entrys, you will be banned!</string>

</resources>
