<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_entry"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_wrapper_margin"
    android:paddingLeft="@dimen/activity_wrapper_margin"
    android:paddingRight="@dimen/activity_wrapper_margin"
    android:paddingTop="@dimen/activity_wrapper_margin"
    tools:context="eu.baron_online.homework.CreateEntryActivity"
    android:layout_width="match_parent">

    <EditText
        android:id="@+id/createEntrySubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="text" />

    <EditText
        android:id="@+id/createEntryMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createEntrySubject"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/media"
        android:inputType="text" />

    <EditText
        android:id="@+id/createEntryPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createEntryMedia"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/page"
        android:inputType="text" />

    <EditText
        android:id="@+id/createEntryNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createEntryPage"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/numbers"
        android:inputType="text"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/createEntryUntil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createEntryNumbers"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/until"
        android:inputType="none" />

    <Button
        android:id="@+id/createEntrySubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createEntryUntil"
        android:layout_marginTop="20dp"
        android:elevation="1dp"
        android:enabled="false"
        android:text="@string/create" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>
</RelativeLayout>
